--- a/src/react/Components/DataDisplay/BarDisplay/BarDisplay.styles.less
+++ b/src/react/Components/DataDisplay/BarDisplay/BarDisplay.styles.less
@@ -32,8 +32,9 @@
   @media screen and (min-width: 320px) and (max-width: 767px) {
     .barDisplay {
       font-size: @fontBodyMobile;
-      height: 25px;
-      min-width: 50px;
+      height: 20px;
+      min-width: 40px;
+      padding: 2px 5px;
     }
   }
 }
