--- a/src/react/Components/Piles/Piles.styles.less
+++ b/src/react/Components/Piles/Piles.styles.less
@@ -41,10 +41,33 @@
   right: 0;
   bottom: 0;
   z-index: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center; // center cards horizontally within column
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .cardContainerColumns {
-    margin-top: 16px;
+    margin-top: 8px;
+  }
+
+  .cardPile {
+    bottom: 46px;
+  }
+
+  .flippedPile {
+    margin-top: -102px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .cardContainerColumns {
+    margin-top: 6px;
+  }
+  .cardPile {
+    bottom: 38px;
+  }
+  .flippedPile {
+    margin-top: -86px;
   }
 }
