Update: Responsive css

--- a/src/react/Components/Cards/Card.styles.less
+++ b/src/react/Components/Cards/Card.styles.less
@@ -133,6 +133,10 @@
   .cardContent {
     margin: 2px;
   }
+  // Shift the goal spot container (placeholder) up and left on very small screens
+  .goalSpotContainer {
+    transform: translate(-5px, -10px);
+  }
 }
 
 @media screen and (min-width: 376px) and (max-width: 767px) {
