--- a/src/react/Pages/GameBoard/GameBoard.styles.less
+++ b/src/react/Pages/GameBoard/GameBoard.styles.less
@@ -64,7 +64,8 @@
     #goal2Pile,
     #goal3Pile,
     #goal4Pile {
-      margin-top: 0;
+      // Nudge goal piles further up on very small screens
+      margin-top: -14px;
     }
   }
 
