--- a/src/react/Components/Buttons/Buttons.styles.less
+++ b/src/react/Components/Buttons/Buttons.styles.less
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .iconButton {
-    padding: 0px 30px;
+    padding: 0 12px; // tighten icon spacing on small screens
   }
 
   .buttonSpaceRow {
