--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,4 @@
-@import (once) "~antd/dist/antd.less";
+@import (once) "antd/dist/antd.less";
 @import (once) "./variables.less";
 @import (once) "./fonts/fonts.less";
 
