--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -18,8 +18,7 @@ body {
   // Pages
   @import (once) "../react/App/App.styles.less";
   @import (once) "../react/Pages/GameBoard/GameBoard.styles.less";
-  @import (once) "../react/Pages/ScoresPage/ScoresPage.styles.less";
-  @import (once) "../react/Pages/StatisticsPage/StatisticsPage.styles.less";
+  // consolidated Scores/Statistics styles now live in App.styles.less
   @import (once) "../react/Pages/AboutPage/AboutPage.styles.less";
   @import (once) "../react/Pages/ErrorPage/ErrorPage.styles.less";
   // Game Components
