--- a/src/react/App/App.styles.less
+++ b/src/react/App/App.styles.less
@@ -121,6 +121,118 @@
   }
 }
 
+// Consolidated page styles: scores and statistics
+.scoresPage {
+
+  .scoresTable {
+    align-self: center;
+    width: 100%;
+    margin-top: -15px;
+
+    .columnExpanded {
+      width: 20%;
+    }
+
+    .columnNotExpanded {
+      width: 50%;
+    }
+  }
+
+  .ant-tabs {
+    color: @buttonActiveColor;
+
+    .ant-tabs-bar {
+      background: @secondaryColor;
+    }
+
+    .ant-tabs-nav {
+      width: 100%;
+    }
+    .ant-tabs-tab {
+      width: 50%;
+      .ant-typography {
+        font-size: @fontTitle;
+        font-weight: bold;
+        color: @fontColor;
+        max-width: 40vw;
+      }
+    }
+
+    .ant-tabs-tab:hover {
+      color: @fontColor;
+    }
+
+    .ant-tabs-tab-active {
+      color: @fontColor;
+    }
+
+    .ant-tabs-ink-bar {
+      background: white;
+    }
+
+    .ant-tabs-nav-container {
+      margin-right: 30px;
+      margin-left: 30px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+    .ant-tabs-nav-container-scrolling {
+      margin-right: 30px;
+      margin-left: 30px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .ant-tabs {
+      min-width: 235px;
+      .ant-tabs-tab {
+        .ant-typography {
+          font-size: @fontTitleMobile;
+        }
+      }
+      .ant-tabs-tab-prev,
+      .ant-tabs-tab-next {
+        display: none;
+      }
+      .ant-tabs-nav-container-scrolling {
+        padding-right: 0px;
+        padding-left: 0px;
+      }
+    }
+  }
+}
+
+.statisticsPage {
+
+  .toggleButton {
+    font-size: @fontPageTitle;
+    position: fixed;
+    bottom: @limitVertical;
+    right: @limitHorizontal;
+    transition: @smallTransitionTime;
+  }
+
+  .toggleButton:hover {
+    color: @hoverElemColor;
+  }
+
+  .ant-empty {
+    padding: 260px 0 0 0;
+  }
+
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .toggleButton {
+      font-size: @fontPageTitleMobile;
+    }
+
+    .ant-empty {
+      padding-top: calc((100vh - 85px - 120px - 60px) / 2);
+    }
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .mainLayout {
     .appContent {
